[gd_scene load_steps=7 format=2]

[ext_resource path="res://HeartLessLand/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HeartLessLand/ButtonAction.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="GDScript" id=4]
script/source = "extends RichTextLabel


export(Color,RGB) var text_color

func _ready():
	set_modulate(text_color)
	pass # Replace with function body.
	
"

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="TutroialScene" type="Node2D"]

[node name="HowToPlay" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="HowToPlay"]
modulate = Color( 0.92549, 0.847059, 0.0313726, 1 )
margin_right = 639.0
margin_bottom = 358.0
color = Color( 0.807843, 0.541176, 0.2, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Controls" type="RichTextLabel" parent="HowToPlay/ColorRect"]
margin_left = 20.0
margin_top = 14.0
margin_right = 363.0
margin_bottom = 302.0
custom_fonts/normal_font = SubResource( 1 )
meta_underlined = false
text = "Tutorial
		"
scroll_active = false
script = SubResource( 4 )
text_color = Color( 0.921569, 0.894118, 0.164706, 1 )

[node name="ReadyButton" type="Button" parent="HowToPlay/ColorRect"]
anchor_left = 0.692
anchor_top = 0.682
anchor_right = 0.692
anchor_bottom = 0.682
margin_left = 52.812
margin_top = -216.156
margin_right = 167.812
margin_bottom = -173.156
custom_fonts/font = SubResource( 2 )
text = "Ready"
clip_text = true
expand_icon = true
script = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlay/ColorRect/ReadyButton"]
margin_left = -472.0
margin_top = 30.0
margin_right = -72.0
margin_bottom = 330.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.0862745, 0.0901961, 0.85098, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "
Movements:

1.Press Standard Arrow Keys

2.Press Ctrl for attack

3.Press C to eat 

4.Press Shift to Run

"
fit_content_height = true

[connection signal="pressed" from="HowToPlay/ColorRect/ReadyButton" to="HowToPlay/ColorRect/ReadyButton" method="_on_ReadyButton_pressed"]
